2000-12-23  Tom Tromey  <tromey@redhat.com>

	* configure.in: Updated to 1.4b and released.

	* config.guess, config.sub, texinfo.tex: New versions.

	* automake.in (handle_dist_worker): Always define DIST_SUBDIRS.
	Re-fixes pr87.test.

	* subdirs.am (maintainer-clean-recursive): Use DIST_SUBDIRS for
	distclean and maintainer-clean.
	* automake.texi (Top level): Document use of DIST_SUBDIRS.

	From Rusty Ballinger:
	* automake.in (handle_java): Don't skip `noinst' prefix.

	* automake.texi (Invoking aclocal): Mention ## comments.

2000-12-22  Tom Tromey  <tromey@redhat.com>

	From Raja R Harinath:
	* automake.in (libtoolize_sometimes): New global.
	(initialize_global_constants): Added libtoolize_sometimes to
	common_files.

	* m4/depend.m4 (AM_SET_DEPDIR): Ignore errors when running rmdir.

	* m4/depend.m4 (AM_SET_DEPDIR): Remove .deps directory when done.

2000-12-21  Tom Tromey  <tromey@redhat.com>

	* automake.texi (Tags): Document GTAGS target.
	* tags.am (GTAGS): New target.

	* automake.in (libtoolize_files): Removed ltconfig.
	(initialize_global_constants): Added ltconfig to common_files.

2000-12-21  Kevin Ryde <user42@zip.com.au>

	* automake.in (handle_footer): Generate .SUFFIXES target when user
	defines suffixes but automake does not.

2000-12-20  Marc Espie <espie@openbsd.org>

	* automake.in (handle_texinfo): Make path of $vtexi explicit in
	dependency.
	* texi-vers.am: Likewise.

2000-12-20  Tom Tromey  <tromey@redhat.com>

	From Kevin Ryde:
	* automake.in (handle_footer): Always push user suffixes at the
	start of .SUFFIXES:.
	* automake.texi (Suffixes): Updated to reflect new suffix
	handling.

2000-12-18  Tom Tromey  <tromey@redhat.com>

	* automake.in (handle_built_sources): Removed.
	(handle_merge_targets): Handle BUILT_SOURCES.
	* automake.texi (Sources): Updated documentation of
	BUILT_SOURCES.

2000-12-17  Tom Tromey  <tromey@redhat.com>

	* m4/protos.m4: Always do header checks.
