@@ -1,7 +1,7 @@
 dnl Process this file with autoconf to produce a configure script.
 AC_INIT(automake.in)
 
-AM_INIT_AUTOMAKE(automake, 1.4b)
+AM_INIT_AUTOMAKE(automake, 1.4c)
 
 ACLOCAL="`pwd`/aclocal --acdir=m4"
 AUTOMAKE="`pwd`/automake --amdir=."
