@@ -1,4 +1,4 @@
 @set UPDATED 23 December 2000
 @set UPDATED-MONTH December 2000
-@set EDITION 1.4b
-@set VERSION 1.4b
+@set EDITION 1.4c
+@set VERSION 1.4c
