@@ -1,5 +1,7 @@
 2000-12-23  Tom Tromey  <tromey@redhat.com>
 
+	* configure.in: Updated to 1.4c for cvs.
+
 	* configure.in: Updated to 1.4b and released.
 
 	* config.guess, config.sub, texinfo.tex: New versions.
